tests/baselines/reference/collisionCodeGenModuleWithMethodChildren(strict=true).errors.txt
collisionCodeGenModuleWithMethodChildren.ts(4,12): error TS7006: Parameter 'M' implicitly has an 'any' type.


==== collisionCodeGenModuleWithMethodChildren.ts (1 errors) ====
    module M {
        export var x = 3;
        class c {
            fn(M, p = x) { }
               ~
!!! error TS7006: Parameter 'M' implicitly has an 'any' type.
        }
    }
    
    module M {
        class d {
            fn2() {
                var M;
                var p = x;
            }
        }
    }
    
    module M {
        class e {
            fn3() {
                function M() {
                    var p = x;
                }
            }
        }
    }
    
    module M { // Shouldnt bn _M
        class f {
            M() {
            }
        }
    }